# BIA-2023-Course-Project

./: CMakeLists.txt  README.md
StaticLibrary/: StaticLib.lib  StaticLibrary.cpp  stdlib.cpp
src/: main.cpp
src/Chains/: ChainsEnum.h
src/Error/: Error.cpp  Error.h
src/Generation/: Gen.cpp  Gen.h  gen
src/In/: In.cpp  In.h
src/Lexer/: newLexer.cpp  newLexer.h
src/Log/: Log.cpp  Log.h
src/Parm/: Parm.cpp  Parm.h
src/PolishNotation/: PolishNotation.cpp  PolishNotation.h
src/Semantics/: Sem.cpp  Sem.h
src/Syntacsis/: GRB.cpp  GRB.h  MFST.cpp  MFST.h  Rules.h
src/WCHAR/: WCHAR.cpp  WCHAR.h
src/fst/: FST.cpp  FST.h
